--- a/css/style.production.css
+++ b/css/style.production.css
@@ -98,15 +98,14 @@ a:focus {
   color: #0e5cad;
 }
 
+/*
 a:active {
-  color: #0e5cad;
+  color: var(--color__01);
   text-decoration: underline;
-  -webkit-text-decoration-style: wavy;
   text-decoration-style: wavy;
-  -webkit-text-decoration-color: #0e5cad;
-  text-decoration-color: #0e5cad;
+  text-decoration-color: var(--color__01);
 }
-
+*/
 button {
   border: none;
   display: inline-block;
