--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,6 @@ a:active {
   text-decoration-color: var(--color__01);
 }
 */
-
 button,
 #button,
 input[type="submit"] {
@@ -276,6 +275,10 @@ img.profile__portrait {
 }
 
 @media all and (min-width: 500px) and (max-width: 777px) {
+  img.profile__portrait {
+    margin: 65px 0 0;
+  }
+
   .work-grid {
     grid-template-columns: 1fr 1fr;
   }
@@ -286,6 +289,11 @@ img.profile__portrait {
 }
 
 @media all and (max-width: 500px) {
+  img.profile__portrait {
+    width: 100%;
+    margin: 55px 0 0;
+  }
+
   .page-header {
     padding: 18px 0 10px;
   }
