--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,5 +1,13 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -22,16 +30,16 @@ h1 {
   font-weight: 500;
   line-height: 1.2;
 }
-
 @media all and (max-width: 500px) {
+
   h1 {
-    font-size: 28px;
+  font-size: 28px;
   }
 }
-
 @media all and (min-width: 500px) and (max-width: 777px) {
+
   h1 {
-    font-size: 31px;
+  font-size: 31px;
   }
 }
 
@@ -59,21 +67,34 @@ p {
 
 form {
   line-height: 1.8em;
+  display: -ms-grid;
   display: grid;
 }
 
 a {
   color: #212121;
   text-underline-offset: 0.2em;
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+       -o-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-property: color, -webkit-text-decoration;
+  transition-property: color, -webkit-text-decoration;
+  -o-transition-property: color, text-decoration;
   transition-property: color, text-decoration;
+  transition-property: color, text-decoration, -webkit-text-decoration;
 }
 
 a:visited {
   color: #212121;
   text-underline-offset: 0.2em;
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+       -o-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-property: color, -webkit-text-decoration;
+  transition-property: color, -webkit-text-decoration;
+  -o-transition-property: color, text-decoration;
   transition-property: color, text-decoration;
+  transition-property: color, text-decoration, -webkit-text-decoration;
 }
 
 a:hover {
@@ -103,9 +124,10 @@ button {
   text-decoration: none;
   padding: 9px;
   border-radius: 0;
+  -webkit-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
-
 #button {
   border: none;
   display: inline-block;
@@ -117,9 +139,10 @@ button {
   text-decoration: none;
   padding: 9px;
   border-radius: 0;
+  -webkit-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
-
 input[type="submit"] {
   border: none;
   display: inline-block;
@@ -131,6 +154,8 @@ input[type="submit"] {
   text-decoration: none;
   padding: 9px;
   border-radius: 0;
+  -webkit-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
 
@@ -154,6 +179,8 @@ input[type="submit"]:hover {
   text-decoration: none;
   padding: 10px;
   border-radius: 0;
+  -webkit-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
 
@@ -199,6 +226,8 @@ nav .navigation-list__item--active {
 }
 
 .page-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 40px 0 12px;
 }
@@ -208,25 +237,52 @@ nav .navigation-list__item--active {
 }
 
 .page-header__item {
-  flex: 0 1 200px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right;
 }
 
 .profile {
   min-height: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: -o-linear-gradient(315deg, #79f1a4 10%, #0e5cad 100%);
   background-image: linear-gradient(135deg, #79f1a4 10%, #0e5cad 100%);
 
   /* background vs background-image vs color */
   background-size: 400% 400%;
-  animation: gradient 32s linear infinite;
+  -webkit-animation: gradient 32s linear infinite;
+          animation: gradient 32s linear infinite;
+}
+
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 @keyframes gradient {
@@ -244,7 +300,9 @@ nav .navigation-list__item--active {
 }
 
 .profile__item {
-  flex: 1 1 350px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 350px;
+          flex: 1 1 350px;
   padding: 25px;
 }
 
@@ -273,10 +331,13 @@ img.profile__portrait {
 /* end work-grid fallback */
 @supports (display: grid) {
   .work-grid {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     margin: 0;
+    text-align: center;
   }
 
   .work-grid__item {
@@ -292,14 +353,22 @@ img.profile__portrait {
   }
 
   @supports (display: grid) {
+
     .work-grid__item {
-      background: rgba(41, 210, 149, 0.9);
+    background: rgba(41, 210, 149, 0.9);
     }
+  }
+
+  .work-grid__image {
+    border-radius: 50%;
   }
 
   .work-grid__item:last-child {
     /* is 4 correct in grid-column? */
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
     grid-column: 2 / 4;
+    -ms-grid-row: 2;
     grid-row: 2 / 2;
   }
 }
@@ -310,17 +379,24 @@ img.profile__portrait {
 */
 .about-flex {
   background-color: rgba(41, 210, 149, 0.9);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .about-flex__item:first-child {
-  flex: 1 1 150px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 150px;
+          flex: 1 1 150px;
   padding: 25px;
 }
 
 .about-flex__item {
-  flex: 1 1 350px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 350px;
+          flex: 1 1 350px;
   padding: 25px;
 }
 
@@ -356,7 +432,9 @@ img.profile__portrait {
 /* end contact-grid fallback */
 @supports (display: grid) {
   .contact-grid {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     margin: 0;
@@ -375,8 +453,9 @@ img.profile__portrait {
   }
 
   @supports (display: grid) {
+
     .contact-grid__item {
-      background: rgba(41, 210, 149, 0.9);
+    background: rgba(41, 210, 149, 0.9);
     }
   }
 }
@@ -412,6 +491,7 @@ img.profile__portrait {
   }
 
   .contact-grid {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
@@ -422,6 +502,7 @@ img.profile__portrait {
   }
 
   .work-grid {
+    -ms-grid-columns: 1fr 15px 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
@@ -437,6 +518,7 @@ img.profile__portrait {
   }
 
   .work-grid {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 
@@ -458,15 +540,36 @@ section.qualifications {
 
 .page-footer {
   clear: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
 }
 
 .socials-footer {
+  background-image: -webkit-gradient(linear, left top, right top, from(blue), color-stop(darkblue), color-stop(red), to(purple));
+  background-image: -o-linear-gradient(left, blue, darkblue, red, purple);
   background-image: linear-gradient(90deg, blue, darkblue, red, purple);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+@-webkit-keyframes color-change {
+  0% {
+    fill: #0e5cad;
+  }
+
+  50% {
+    fill: #79f1a4;
+  }
+
+  100% {
+    fill: yellow;
+  }
 }
 
 @keyframes color-change {
@@ -484,25 +587,44 @@ section.qualifications {
 }
 
 .sun {
-  animation: 5s color-change infinite alternate linear;
+  -webkit-animation: 5s color-change infinite alternate linear;
+          animation: 5s color-change infinite alternate linear;
+}
+
+@-webkit-keyframes cloud-moves {
+  from {
+    -webkit-transform: translate(0, 50px);
+            transform: translate(0, 50px);
+  }
+
+  to {
+    -webkit-transform: translate(620px, 50px);
+            transform: translate(620px, 50px);
+  }
 }
 
 @keyframes cloud-moves {
   from {
-    transform: translate(0, 50px);
+    -webkit-transform: translate(0, 50px);
+            transform: translate(0, 50px);
   }
 
   to {
-    transform: translate(620px, 50px);
+    -webkit-transform: translate(620px, 50px);
+            transform: translate(620px, 50px);
   }
 }
 
 .cloud-back {
-  animation-duration: 44s;
-  animation-name: cloud-moves;
-  animation-iteration-count: infinite;
+  -webkit-animation-duration: 44s;
+          animation-duration: 44s;
+  -webkit-animation-name: cloud-moves;
+          animation-name: cloud-moves;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
   animation-direction: alternate-reverse;
-  animation-timing-function: ease-in-out;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
 }
 
 /* Obsolete Colors
