--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,7 +1,7 @@
 /*
 * Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.3.6,
-* Autoprefixer: v10.3.1
+* PostCSS: v8.4.12,
+* Autoprefixer: v10.4.4
 * Browsers: last 4 version
 */
 
@@ -560,6 +560,7 @@ section.qualifications {
   -ms-flex-direction: column;
   flex-direction: column;
   text-align: center;
+  margin: 0 0 1.2em;
 }
 
 .socials-footer {
